# arc-challenge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  gpu_names_cache.json  hello.py  lizu81tx.py  lsyncd.conf.lua  pyproject.toml  requirements.txt  setup.py  solutions.py  ssh_13548233.json
arc/: architects.py  code_gen.py  config.py  core.py  decorators.py  generate_task.py  program.py  settings.py  task.py  tokenizers.py  training.py  transform.py  types.py  utils.py
arc/datasets/: barc_generated_problems.py  barc_modified_programs.py  core.py  derivations.py  handlers.py  seed.py  transform.py
arc/dsl/: common.py  dsl.py  types.py
arc/seed_tasks/: base_tasks.py  constants.py  types.py
arc/seed_tasks/base_tasks/: hmirror_grid.py
arc/tasks/: constants.py  lib.py  prompts.py  types.py
arc/utils/: os_utils.py
arc_dsl/: main.py
config/: llama_3_1_8b_lora_induction_baseline.yaml  llama_8b_lora.yaml  test.yaml
config/fine_tuning_config/: __init__.py  architects.py  arcitects.py
data/: base_task_descriptions.csv
data/tmp_solutions/: solution_4dea75a1.py  solution_8f67f5e1.py
notebooks/: Untitled.ipynb  demo_llmulate.ipynb  generate_incorrect_programs.ipynb  self_improvement_oracle_experiment.ipynb  self_improvement_simple_experiment.ipynb
notebooks/.ipynb_checkpoints/: generate_incorrect_programs-checkpoint.ipynb
scripts/: architects copypasta.py  architects_copypasta.py  architects_eval.py  create_base_task_concept_descriptions.py  create_puzzle_descriptions.py  dummy.py  evaluate_baseline.py  evaluate_model.py  evaluate_openai.py  exploration.py  finetune.py  finetune.sh  finetune_program_improvement.py  finetune_unsloth.py  generate_incorrect_programs.py  generate_incorrect_solutions.py  generate_modified_programs.py  generate_puzzle.py  generate_tasks.py  parse_barc_generated_problems.py  reproduce_architects_finetuning.py  setup_remote.sh  setup_vastai.sh
scripts/data/: base_task_descriptions.csv
tests/: test_arckit.py  test_formatter.py
tests/datasets/: test_e2e.py
wandb/: latest-run
wandb/run-20241211_213624-2x25iybh/: run-2x25iybh.wandb
wandb/run-20241211_214904-hkkdojuk/: run-hkkdojuk.wandb
wandb/run-20241211_215347-4ssk3yu6/: run-4ssk3yu6.wandb
wandb/run-20241211_220215-3y3dorsm/: run-3y3dorsm.wandb
(+411 files in other folders)
