[project]
name = "arc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arckit>=0.1.0",
    "datasets>=2.17.1",
    "drawsvg[all]>=2.4.0",
    "ipython>=7.31.1",
    "loguru>=0.7.2",
    "matplotlib>=3.9.3",
    "openai==1.55.3",
    "pre-commit>=4.0.1",
    "pydantic>=2.9.2",
    "pyright>=1.1.386",
    "pytest>=8.3.4",
    "python-dotenv==1.0.1",
    "ruff>=0.7.2",
    "scipy>=1.12.0",
    "tokenizers>=0.15.2",
    "torch==2.4.1",
    "torchao==0.6.1",
    "torchaudio==2.4.1",
    "torchtune==0.3.1",
    "torchvision==0.19.1",
    "transformers>=4.39.0",
    "trl==0.11.4",
    "wandb==0.18.6",
]

[tool.pyright]
  exclude = ["tests", "arc/dsl", "scripts", "data", "notebooks"]
  venvPath = "."
  venv = ".venv"

[tool.ruff]
exclude = ["arc/dsl", "data", "notebooks"]

[tool.pytest.ini_options]
pythonpath = ["."]

