[project]
name = "arc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arckit>=0.1.0",
    "datasets>=2.17.1",
    "drawsvg[all]>=2.4.0",
    "ipython>=7.31.1",
    "loguru>=0.7.2",
    "matplotlib>=3.9.3",
    "openai==1.55.3",
    "pre-commit>=4.0.1",
    "pydantic>=2.9.2",
    "pyright>=1.1.386",
    "pytest>=8.3.4",
    "python-dotenv==1.0.1",
    "ruff>=0.7.2",
    "scipy>=1.12.0",
    "tokenizers>=0.15.2",
    "torch==2.3.1",
    "torchao==0.6.1",
    "torchaudio==2.3.1",
    "torchtune==0.3.1",
    "torchvision==0.18.1",
    "trl==0.11.4",
    "unsloth[cu121-torch230]",
    "wandb==0.18.6",
]

[tool.pyright]
  exclude = ["tests", "arc/dsl", "scripts", "data", "notebooks"]
  venvPath = "."
  venv = ".venv"

[tool.ruff]
exclude = ["arc/dsl", "data", "notebooks"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
arc = { workspace = true }
transformers = { git = "https://github.com/huggingface/transformers.git" }
unsloth = { git = "https://github.com/unslothai/unsloth.git" }

[dependency-groups]
dev = [
    "arc",
    "ipdb>=0.13.13",
    "pytest-xdist[psutil]>=3.6.1",
    "pytest>=8.3.4",
]
gpu = [
    "unsloth[cu121-torch230]",
    "flash-attn==2.6.3",
]
